<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

            <LinearLayout
                android:id="@+id/llProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/ivUser"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/profile_icon" />

                <TextView
                    android:id="@+id/tvUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/profile"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </LinearLayout>

    <LinearLayout
        android:id="@+id/llEarn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/ivEarn"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/your_earning_icon"/>

        <TextView
            android:id="@+id/tvEarn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/your_earn"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
                android:id="@+id/llBank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/ivBank"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/bank_details_icon" />

                <TextView
                    android:id="@+id/tvBank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/bank_details"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llNotify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/ivNotify"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/notification_icon" />

                <TextView
                    android:id="@+id/tvNotify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/notify"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/ivSetting"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/setting_icon" />

                <TextView
                    android:id="@+id/tvSetting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/setting"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/ivLogout"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/logout_icon" />

                <TextView
                    android:id="@+id/tvLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/logout"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>