<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:orientation="vertical">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    app:cardElevation="10dp"
    app:cardCornerRadius="15dp"
    android:layout_centerVertical="true"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/payment_check" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_regular"
                android:textSize="25sp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:text="@string/sendsuccessfully"
                android:textAlignment="center" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_regular"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:text="@string/msgsend"
                android:textAlignment="center" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvOkk"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/ok"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
</RelativeLayout>

