<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="10dp">

        <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Payment_done_popup.Payment_Done_Popup">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:background="@drawable/dark_circle">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/check_arrow" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/accountadd"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="13sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:text="@string/addsuccessfull"
                    android:textAlignment="center" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvOkay"
                    android:layout_width="220dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    app:cardBackgroundColor="@color/black"
                    app:cardCornerRadius="16dp">

                    <TextView
                        android:id="@+id/okay_button"
                        android:layout_width="150dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:backgroundTint="@color/black"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/ok"
                        android:textSize="18dp"/>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>